K/kubefed-ZB5KhSLN7gV/kubefed.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubefed-admission-webhook
  namespace: ZB5KhSLN7gV
spec:
  selector:
    kubefed-admission-webhook: "true"
  ports:
    - port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: kubefed-controller-manager-metrics-service
  namespace: ZB5KhSLN7gV
  annotations:
    prometheus.io/port: "9090"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
spec:
  selector:
    kubefed-control-plane: controller-manager
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubefed-controller-manager
  namespace: ZB5KhSLN7gV
  labels:
    kubefed-control-plane: controller-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      kubefed-control-plane: controller-manager
  strategy: {}
  template:
    metadata:
      labels:
        kubefed-control-plane: controller-manager
    spec:
      nodeSelector: {}
      tolerations: []
      securityContext:
        runAsUser: 1001
      serviceAccountName: kubefed-controller
      containers:
        - command:
            - /hyperfed/controller-manager
            - --v=2
          image: docker.io/mesosphere/kubefed:proxyurl
          imagePullPolicy: IfNotPresent
          name: controller-manager
          ports:
            - containerPort: 9090
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi
      terminationGracePeriodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ZB5KhSLN7gV
  name: kubefed-admission-webhook
  labels:
    kubefed-admission-webhook: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      kubefed-admission-webhook: "true"
  template:
    metadata:
      labels:
        kubefed-admission-webhook: "true"
    spec:
      nodeSelector: {}
      tolerations: []
      securityContext:
        runAsUser: 1001
      serviceAccountName: kubefed-admission-webhook
      containers:
        - name: admission-webhook
          image: docker.io/mesosphere/kubefed:proxyurl
          imagePullPolicy: IfNotPresent
          command:
            - /hyperfed/webhook
            - --secure-port=8443
            - --cert-dir=/var/serving-cert/
            - --v=8
          ports:
            - containerPort: 8443
          volumeMounts:
            - mountPath: /var/serving-cert
              name: serving-cert
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8443
              scheme: HTTPS
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: serving-cert
          secret:
            defaultMode: 420
            secretName: kubefed-admission-webhook-serving-cert
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutation.core.kubefed.io
webhooks:
  - name: kubefedconfigs.core.kubefed.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /default-kubefedconfig
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPakNDQWlLZ0F3SUJBZ0lSQUw3YzR5Z1VLenB3NGpDL2tGL0Ezak13RFFZSktvWklodmNOQVFFTEJRQXcKSnpFbE1DTUdBMVVFQXhNY2EzVmlaV1psWkMxaFpHMXBjM05wYjI0dGQyVmlhRzl2YXkxallUQWVGdzB5TWpBMgpNVEl4TWpBek5EaGFGdzB6TWpBMk1Ea3hNakF6TkRoYU1DY3hKVEFqQmdOVkJBTVRIR3QxWW1WbVpXUXRZV1J0CmFYTnphVzl1TFhkbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUIKQVFER3hQL29pTkNVNzZwM3FKT0p2eTBPeFFKL2VyUEZYYU5JNHFqSHU3Rm5qaWNObkpBU3VmOVdsQVFVdmJxYwpVaG9xMTVNRzI4 [...]
    rules:
      - operations:
          - CREATE
        apiGroups:
          - core.kubefed.io
        apiVersions:
          - v1beta1
        resources:
          - kubefedconfigs
    failurePolicy: Fail
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validations.core.kubefed.io
  annotations: null
webhooks:
  - name: federatedtypeconfigs.core.kubefed.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /validate-federatedtypeconfigs
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPakNDQWlLZ0F3SUJBZ0lSQUw3YzR5Z1VLenB3NGpDL2tGL0Ezak13RFFZSktvWklodmNOQVFFTEJRQXcKSnpFbE1DTUdBMVVFQXhNY2EzVmlaV1psWkMxaFpHMXBjM05wYjI0dGQyVmlhRzl2YXkxallUQWVGdzB5TWpBMgpNVEl4TWpBek5EaGFGdzB6TWpBMk1Ea3hNakF6TkRoYU1DY3hKVEFqQmdOVkJBTVRIR3QxWW1WbVpXUXRZV1J0CmFYTnphVzl1TFhkbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUIKQVFER3hQL29pTkNVNzZwM3FKT0p2eTBPeFFKL2VyUEZYYU5JNHFqSHU3Rm5qaWNObkpBU3VmOVdsQVFVdmJxYwpVaG9xMTVNRzI4 [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - core.kubefed.io
        apiVersions:
          - v1beta1
        resources:
          - federatedtypeconfigs
          - federatedtypeconfigs/status
    failurePolicy: Fail
  - name: kubefedclusters.core.kubefed.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /validate-kubefedcluster
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPakNDQWlLZ0F3SUJBZ0lSQUw3YzR5Z1VLenB3NGpDL2tGL0Ezak13RFFZSktvWklodmNOQVFFTEJRQXcKSnpFbE1DTUdBMVVFQXhNY2EzVmlaV1psWkMxaFpHMXBjM05wYjI0dGQyVmlhRzl2YXkxallUQWVGdzB5TWpBMgpNVEl4TWpBek5EaGFGdzB6TWpBMk1Ea3hNakF6TkRoYU1DY3hKVEFqQmdOVkJBTVRIR3QxWW1WbVpXUXRZV1J0CmFYTnphVzl1TFhkbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUIKQVFER3hQL29pTkNVNzZwM3FKT0p2eTBPeFFKL2VyUEZYYU5JNHFqSHU3Rm5qaWNObkpBU3VmOVdsQVFVdmJxYwpVaG9xMTVNRzI4 [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - core.kubefed.io
        apiVersions:
          - v1beta1
        resources:
          - kubefedclusters
          - kubefedclusters/status
    failurePolicy: Fail
  - name: kubefedconfigs.core.kubefed.io
    clientConfig:
      service:
        namespace: default
        name: kubefed-admission-webhook
        path: /validate-kubefedconfig
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPakNDQWlLZ0F3SUJBZ0lSQUw3YzR5Z1VLenB3NGpDL2tGL0Ezak13RFFZSktvWklodmNOQVFFTEJRQXcKSnpFbE1DTUdBMVVFQXhNY2EzVmlaV1psWkMxaFpHMXBjM05wYjI0dGQyVmlhRzl2YXkxallUQWVGdzB5TWpBMgpNVEl4TWpBek5EaGFGdzB6TWpBMk1Ea3hNakF6TkRoYU1DY3hKVEFqQmdOVkJBTVRIR3QxWW1WbVpXUXRZV1J0CmFYTnphVzl1TFhkbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUIKQVFER3hQL29pTkNVNzZwM3FKT0p2eTBPeFFKL2VyUEZYYU5JNHFqSHU3Rm5qaWNObkpBU3VmOVdsQVFVdmJxYwpVaG9xMTVNRzI4 [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - core.kubefed.io
        apiVersions:
          - v1beta1
        resources:
          - kubefedconfigs
    failurePolicy: Fail
